--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item d-flex align-items-center" background-image= "../img/sd3.jpg">
+				<div class="item d-flex align-items-center" >
 					<div class="container">
 						<div class="content">
 							<h1 class="text-white text-uppercase">七夕</h1>
@@ -80,6 +80,8 @@
 						</div>
 					</div>
 				</div>
+				
+				
 			</div>
 		</div>
 		<!-- Start Feature Area -->
